--- a/ftpserver/css/style.css
+++ b/ftpserver/css/style.css
@@ -14,26 +14,36 @@ font-family: Arial, Helvetica, sans-serif;
 }
 .firstdiv
 {
-    height: 100vh;
+height: 100vh;
 
 }
 .first-container{
-    height: 100vh;
-    width: 100%;
+height: 100vh;
+width: 100%;
+}
+.first-container h1
+{
+margin:20px;
 }
 .first-container div
 {
-    margin-top:10px;
+display: flex;
+justify-content: center;
+align-items: center;
 }
 .files-container
 {
-    width: 100%;
-    display: flex;
+width: 100%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 }
 .files-container table
 {
-    width: 50%;
-    border-spacing: 0;
+width: 50%;
+border-spacing: 0px;
+border-collapse: collapse;
 }
 .files-container tr
 {
@@ -51,29 +61,39 @@ cursor:default;
 }
 .files-container th
 {
-    width: 50%;
-    text-align: left;
-    padding:10px;
-    background-color: var(--dblue);
-    color: var(--bblue);
+width: 50%;
+text-align: left;
+padding:10px;
+background-color: var(--dblue);
+color: var(--bblue);
+border:1px solid var(--dblue);  
 }
 .files-container td
 {
+
 padding:10px;
+border-right: 1px solid var(--blue);
+border-left:1px solid var(--blue);
 border-bottom:1px solid var(--blue);
 width: 50%;
 }
 .routing
 {
-    width: 50%;
+    padding:12px;
 }
 .routing a
 {
-    padding:10px;
-    border:1px solid var(--dblue);
+    border-bottom:1px solid var(--blue);
+    padding:6px;
+    margin:4px;
 }
 .routing a:hover
 {
-    background-color: var(--blue);
-    cursor: pointer;
+background-color: var(--blue);
+cursor: pointer;
+}
+.currentfolder span
+{
+    margin:5px;
+border-bottom: 1px solid var(--blue);
 }
